initial design with colors

--- a/index.html
+++ b/index.html
@@ -2,10 +2,38 @@
 <html lang="en">
 
 <head>
-<title></title>
+
+<title>My Website Design system</title>
+
+<link href='css/style.css' rel='stylesheet'>
+
 </head>
 
 <body>
+
+<h1>My Website design system</h1>
+
+<h2>Colors</h2>
+
+<p>Below is a selection of my favourite colors to use in web design</p>
+
+		  <div class="AliceBlue"><p>AliceBlue #F0F8FF</p></div>
+          <div class="DarkBlue"><p>DarkBlue #00008B</p></div>
+          <div class="DarkMagenta"><p>DarkMagenta #8B008B</p></div>
+          <div class="Maroon"><p>Maroon #800000</p></div>
+          <div class="Red"><p>Red #FF0000</p></div>
+		  <div class="MistyRose"><p>MistyRose #FFE4E1</p></div>
+		  <div class="SpringGreen"><p>SpringGreen #00FF7F</p></div>
+		  <div class="Turquoise"><p>Turquoise #40E0D0</p></div>
+		  <div class="SlateGrey"><p>SlateGrey #708090</p></div>
+<h2>Fonts</h2>
+
+<p>Below is a selection of my favourite colors to use in web design</p>
+
+<h2>Text Styles</h2>
+
+<p>Below is a selection of my favourite colors to use in web design</p>
+
 </body>
 
 </html>
